-- Executable relational schema used by the final Node.js application (SQLite dialect).
PRAGMA foreign_keys = ON;
CREATE TABLE users (user_id INTEGER PRIMARY KEY AUTOINCREMENT,name TEXT NOT NULL,email TEXT NOT NULL UNIQUE COLLATE NOCASE,password_hash TEXT NOT NULL,password_salt TEXT NOT NULL,role TEXT NOT NULL DEFAULT 'user' CHECK(role IN('user','admin')),status TEXT NOT NULL DEFAULT 'active' CHECK(status IN('active','disabled')),created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE sessions (token_hash TEXT PRIMARY KEY,user_id INTEGER NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,expires_at TEXT NOT NULL,created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE categories (category_id INTEGER PRIMARY KEY AUTOINCREMENT,name TEXT NOT NULL UNIQUE);
CREATE TABLE expenses (expense_id INTEGER PRIMARY KEY AUTOINCREMENT,user_id INTEGER NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,title TEXT NOT NULL,amount_cents INTEGER NOT NULL CHECK(amount_cents>0),category TEXT NOT NULL REFERENCES categories(name),expense_date TEXT NOT NULL,created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP,updated_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE monthly_budgets (budget_id INTEGER PRIMARY KEY AUTOINCREMENT,user_id INTEGER NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,month TEXT NOT NULL,limit_cents INTEGER NOT NULL CHECK(limit_cents>0),updated_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP,UNIQUE(user_id,month));
CREATE TABLE acceptance_feedback (feedback_id INTEGER PRIMARY KEY AUTOINCREMENT,iteration INTEGER NOT NULL CHECK(iteration BETWEEN 1 AND 3),reviewer TEXT NOT NULL,outcome TEXT NOT NULL CHECK(outcome IN('accepted','accepted_with_changes','rejected')),comments TEXT NOT NULL,created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP);
CREATE TABLE bugs (bug_id INTEGER PRIMARY KEY AUTOINCREMENT,external_id TEXT UNIQUE,linked_user_story TEXT NOT NULL,title TEXT NOT NULL,severity TEXT NOT NULL,status TEXT NOT NULL,resolution TEXT,created_at TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP,closed_at TEXT);
